[gd_scene load_steps=7 format=3 uid="uid://dc14enwb0wcu6"]

[ext_resource type="Script" path="res://scipts/snake_apple_main.gd" id="1_wudqt"]
[ext_resource type="PackedScene" uid="uid://ckubnxi34osm3" path="res://scenes/snake_segment.tscn" id="2_gay3k"]
[ext_resource type="Texture2D" uid="uid://bj2ambwei5ogi" path="res://Asset/bg.png" id="3_us5gb"]
[ext_resource type="PackedScene" uid="uid://bskk40riq3eep" path="res://scenes/hud.tscn" id="4_ojgo1"]
[ext_resource type="Texture2D" uid="uid://dxyvfago0gd5f" path="res://Asset/apple.png" id="5_gk25w"]
[ext_resource type="PackedScene" uid="uid://6hol37kguipv" path="res://scenes/game_over_menu.tscn" id="6_7r32f"]

[node name="Main" type="Node"]
script = ExtResource("1_wudqt")
snake_scene = ExtResource("2_gay3k")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 524)
scale = Vector2(1, 1.048)
texture = ExtResource("3_us5gb")

[node name="HUD" parent="." instance=ExtResource("4_ojgo1")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Food" type="Sprite2D" parent="."]
texture = ExtResource("5_gk25w")
offset = Vector2(25, 25)

[node name="GameOverMenu" parent="." instance=ExtResource("6_7r32f")]
process_mode = 2

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
